--- a/src/shared/style/style.scss
+++ b/src/shared/style/style.scss
@@ -113,6 +113,7 @@ ol {
   padding: $spacing-0;
   margin-bottom: $spacing-8;
   list-style-image: none;
+  list-style-position: inside;
 }
 
 ul li,
